Bug 1563649 - As with display list item and reflow for position:fixed elements, use the adjusted layout viewport size getComputedStyle() r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D41930